frontend/assets/css/style.scss
/* ... */
.quicklink-container {
  margin: 3%;
}

.quicklink {
  text-align: center;
  background: rgb(18, 77, 32, 0.1);
  padding-bottom: 1%;
  width: 20%;
  color: #000;
  font-family: "Jost", sans-serif;
  font-size: 16px;
  font-style: normal;
  font-weight: 400;
  line-height: 180%; /* 28.8px */
  border-top: 5px solid #124D20;
}

.quicklink-text {
  padding: 10%;
  height: 5vw;
  font-size: 100%;
}

.quicklink-spacer {
  margin-right: 5%;
}


// position: fixed;
// margin-top: 5%;






// GENERAL

html {
  box-sizing: border-box;
  scroll-behavior: smooth;
}

*, *:before, *:after {
  box-sizing: inherit;
}

body {
  width: 100%;
  padding: 0;
  margin: 0 auto;
  font-family: "Jost", sans-serif;
  .container{
    max-width: 1400px;
    margin: 0 auto;
    padding: 0 16px;
    font-size:18px;
    a{
      color: $dark-green;
    }
  }
}

a {
  &:hover {
    opacity: 0.7;
  }

  //&hover
}

//a

a#sitetitle {
  color: white;
  text-decoration: none;
  padding-left: 1%;
  display: block;
  z-index: 9;
  font-size: 22px;
  line-height: 1.2;
  @include transition(all 250ms ease-in);
  &:hover{
    opacity: 0.8;
  }
}
// a#sitetitle

// NAV
nav {
  top: 0;
  width: 100%;
  border-bottom: 4px solid darken($lightgreen, 20%);
  background: $darkgreen;
  padding-bottom: 0.1em;
  z-index: 9;
}

//nav
#mainmenu {
  .active {
    color: darken($lightgreen, 5%);
    border-left: 0.1em solid darken($lightgreen, 5%);
    padding-left: 0.5em;
  }

  > ol {
    //1st level
    position: fixed;
    z-index: 999;
    height: 100vh;
    width: 18em;
    top: 0;
    right: -100vw;
    margin: 0;
    @include transition(all 300ms ease-in);
    background: lighten(black, 12%);
    padding: 5em 0 0 3em;
    line-height: 1.4;
    overflow: scroll;
    text-align: left;

    > li {
      display: block;
      margin-bottom: 1em;

      > a {
        font-size: 1.6em;
        text-decoration: none;
        display: block;
        line-height: 1;
        color: white;
        cursor: pointer;
      }

      //a
      &:last-of-type {
        padding-bottom: 50vh;
      }

      //&:not(:last-of-type)
      > ol {
        //2nd level
        margin-bottom: 1em;

        li {
          list-style-type: none;

          a {
            color: white;
            text-decoration: none;
          }

          //a
        }

        //li
      }

      //ol
    }

    //li
  }

  /* end ol*/
  > label {
    display: block;
    @include transition(all 250ms ease-in);
    cursor: pointer;
    position: fixed;
    padding: 0.5em 0.5em 0.3em 0.5em;
    background: transparent;
    top: 0;
    right: 0;
    font-size: 20px;
    font-weight: 300;
    color: white;
    z-index: 9999;
    background: $darkgreen;
    &:hover{
      opacity: 0.8;
    }
  }

  input#menu[type="checkbox"] {
    display: none;
  }

  input#menu[type="checkbox"]:checked ~ ol {
    margin: 0;
    right: 0;
  }

  input#menu[type="checkbox"]:checked ~ label.menu {
    right: 2em;
    @include transform(rotate(0));
    background: none;
    @include transition(all 400ms ease-in);
    /* cross icon */
    &:before {
      content: "✖";
      position: fixed;
      right: -1.8em;
      top: 0.6em;
      height: 1.7em;
      width: 1.7em;
      text-align: center;
      /* font-weight: 100; */
      color: white;
      cursor: pointer;
      font-size: 20px;
    }
  }
}

/* end #menu*/
// END MENU

// HOMEPAGE
.home-hero {
  width: auto;
  background: url("../img/homepage-hero-900.jpg") lightgray -0.36px 0px/100.056% 121.087% no-repeat;
  background-size: cover;
  display: flex;
  align-items: center;
  height: 70vw;
  max-height:50vh;
  min-height:40px;
  display: flex;
  align-items: center;
  justify-content: center;
  position: relative;
  display: flex;
  flex-direction: column;
  .info-box{
    opacity: 0.93;
    background: #FFF;
    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
    padding: 4%;
    color: #000;
    font-family: "Jost", sans-serif;
    font-size: 18px;
    font-style: normal;
    font-weight: 400;
    margin-top: 20vw;
    width:calc(100% - 50vw);
    min-width:400px; /* let's have a minimum boundary */
    max-width:90%; /* and a maximum boundary */
    text-align: center;
    margin:auto;
    a{
      text-decoration: none;
      text-align: center;
      cursor: pointer;
      button{
        border:1px solid $midgreen;
        max-width:250px;
        width:100%;
        text-align: center;
        background-color: $darkgreen;
        color: white;
        margin:1.5em 3% 0 3%;
        font-size: 18px;
        cursor: pointer;
        padding: 0.7em 1em;
        text-transform: uppercase;
        font-weight: 200;
        @include transition(all 300ms ease-in);
      }
      &:hover{
        opacity: 1;
        background-color: white;
        color:$darkgreen;
        button{
          background-color: white;
          color: $darkgreen;
        }
      }
    }
  }
}
.home-section{
  display: flex;
  justify-content: space-between;
  margin:5% auto;
  max-width:1400px;
  .card{
    width: 30%;
    border-top: 5px solid $midgreen;
    background-color: #f1f1f1;
    padding:2%;
    font-size:18px;
    text-align: center;
    display:flex; 
    flex-direction:column;
    margin: 0 2%;
    img{
      width: 100%;
      object-fit: cover;
      max-height: 15vw;
    }
    a {
      margin-top: auto;
      button{
        border:1px solid $midgreen;
        @include transition(all 300ms ease-in);
        background-color: white;
        color: $darkgreen;
        font-size: 18px;
        cursor: pointer;
        width:100%;
        text-transform: uppercase;
        padding:0.7em 1em;
        font-weight: 200;
      }
      &:hover{
        opacity:1;
        button{
          background-color: $darkgreen;
          color: white;
        }
      }
    }
  }
}










// BASEMAP
#basemap {
  z-index: 0 !important;
  position: fixed;
  height: calc(100vh - 50px);
  width: 100%;
  //.leaflet-map-pane
}
/* ... */

